--- a/Styles/styles.css
+++ b/Styles/styles.css
@@ -352,7 +352,7 @@ a:hover {
 .about .content h3 {
   font-weight: 700;
   font-size: 26px;
-  color: #52D1DC;
+  color: #b084cc;
 }
 
 .about .content ul {
@@ -519,4 +519,39 @@ a:hover {
 .back-to-top.active {
   visibility: visible;
   opacity: 1;
+}
+
+
+/* Rotating Profile Picture */
+#slideshow-container {
+  position: relative;
+  width: 100%;
+  height: 0;
+  padding-bottom: 100%; /* Maintains aspect ratio */
+  overflow: hidden;
+}
+
+.slideshow-image {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  opacity: 0;
+  transition: opacity 0.5s ease-in-out;
+}
+
+.slideshow-image.active {
+  opacity: 1;
+}
+
+#image-caption {
+  position: absolute;
+  bottom: 10px;
+  left: 0;
+  right: 0;
+  background-color: rgba(0, 0, 0, 0.7);
+  color: white;
+  padding: 5px;
+  text-align: center;
 }
